fix actions with route alignment (#1562)

--- a/resources/css/base.css
+++ b/resources/css/base.css
@@ -48,3 +48,8 @@ table thead {
     gap: 4px;
     width: 100%;
 }
+
+.pg-actions a {
+  display: inline-block;
+}
+
